# materialize-mcp-server

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  main.py  pyproject.toml  test_phase1.py
.github/workflows/: lint.yml  test.yml
example_configs/: claude_desktop_config.json
materialize_mcp_server/: __init__.py  config.py  logging_config.py  mz_client.py  observability.py  validation.py
tests/integration/: test_mcp.py
