[project]
name = "materialize-mcp-serve"
version = "0.1.0"
description = "An MCP server for Materialize"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.18",
    "fastapi>=0.115.12",
    "mcp>=1.4.1",
    "psycopg-pool>=3.2.6",
    "psycopg>=3.2.6",
    "pyyaml>=6.0.2",
    "simplejson>=3.20.1",
]
