[project]
name = "materialize-mcp-server"
version = "0.1.0"
description = "A server that exposes Materialize indexes as tools over the Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Materialize", email = "support@materialize.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["materialize", "mcp", "database", "api"]
dependencies = [
    "aiohttp>=3.11.18",
    "fastapi>=0.115.12",
    "mcp>=1.4.1",
    "psycopg-pool>=3.2.6",
    "psycopg>=3.2.6",
    "pyyaml>=6.0.2",
    "simplejson>=3.20.1",
]

[project.scripts]
materialize-mcp = "materialize_mcp_server:run"

[project.urls]
Homepage = "https://github.com/MaterializeInc/materialize-mcp-server"
Documentation = "https://github.com/MaterializeInc/materialize-mcp-server#readme"
Repository = "https://github.com/MaterializeInc/materialize-mcp-server.git"
Issues = "https://github.com/MaterializeInc/materialize-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["materialize_mcp_server"]
